--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,5 +36,9 @@
 
         </activity>
 
+        <activity
+                android:name=".SettingsActivity">
+
+        </activity>
     </application>
 </manifest>
